test/errors/indexed_offsets_error/zs/no_array_error.zs
package no_array_error;

struct NoArrayError
{
    uint32  offsets[10];
offsets[@index]:
    int32   field;
};
